ready for deployement

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,7 @@
 PORT=8000
 NODE_ENV=development
 
-MONGO_URI="mongodb+srv://<username>:<password>@<>.mongodb.net/teamsync_db"
+MONGO_URI="mongodb+srv://Ivan:David%4030%2F08%2F2003@cluster1.pdoo2.mongodb.net/Team_Sync?retryWrites=true&w=majority&appName=Cluster1"
 
 SESSION_SECRET="session_secret_key"
 SESSION_EXPIRES_IN="1d"
