--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "emoji-mart": "^5.6.0",
     "immer": "^10.1.1",
