--- a/backend/package.json
+++ b/backend/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
+"scripts": {
   "seed": "ts-node src/seeders/role.seeder.ts",
   "dev": "ts-node-dev --files src/index.ts",
-  "build": "cd ../client && npm install && npm run build && cd ../backend && tsc",
+  "build": "npm run build:client && tsc && npm run copy-client",
+  "build:client": "cd ../client && npm ci --prefer-offline && npm run build",
+  "copy-client": "rm -rf dist/public && mkdir -p dist/public && cp -r ../client/dist/* dist/public/",
   "start": "node dist/index.js"
 },
   "keywords": [],
