--- a/render.yaml
+++ b/render.yaml
@@ -5,11 +5,23 @@ services:
     plan: free
     rootDir: backend
     buildCommand: |
+      # Install backend dependencies
       npm ci --prefer-offline
-      cd ../client && npm ci --prefer-offline
+
+      # Build frontend
+      cd ../client
+      npm ci --prefer-offline
+      npm run build
+
+      # Copy frontend build into backend's public folder
+      rm -rf ../backend/dist/public
+      mkdir -p ../backend/dist/public
+      cp -r dist/* ../backend/dist/public/
+
+      # Build backend
       cd ../backend
       npm run build
-    startCommand: npm run start
+    startCommand: node dist/index.js
     envVars:
       - key: NODE_VERSION
         value: 18
