Second build failed too

--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -5,6 +5,9 @@
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
+
+    /* Add Vite and Node types */
+    "types": ["vite/client", "node"],
     "skipLibCheck": true,
 
     /* Bundler mode */
@@ -21,10 +24,13 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
+
+    /* Path aliases */
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src"]
+  /* Include declarations for CSS + Tailwind */
+  "include": ["src", "src/declarations.d.ts"]
 }
