--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "seed": "ts-node src/seeders/role.seeder.ts",
     "dev": "ts-node-dev --files src/index.ts",
     "build": "tsc && npm run copy-client",
-    "copy-client": "rimraf dist/public && mkdir -p dist/public && cp -r ../client/dist/* dist/public/",
+    "copy-client": "rimraf dist/public && mkdir dist/public && cpx \"../client/dist/**/*\" dist/public",
     "start": "node dist/index.js"
   },
   "keywords": [],
@@ -37,6 +37,7 @@
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-local": "^1.0.38",
+    "cpx": "^1.5.0",
     "rimraf": "^5.0.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.2"
