--- a/backend/package.json
+++ b/backend/package.json
@@ -31,7 +31,7 @@
     "@types/cookie-session": "^2.0.49",
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.3",
-    "@types/express": "^5.0.0",
+    "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.10.2",
     "@types/passport": "^1.0.17",
@@ -39,6 +39,7 @@
     "@types/passport-local": "^1.0.38",
     "cpx": "^1.5.0",
     "rimraf": "^5.0.5",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.2"
   }
